--- a/PluginableHotfix/app/src/main/AndroidManifest.xml
+++ b/PluginableHotfix/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".HotfixApp"
+        android:name=".HotfixApp2"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
