--- a/MotionLayout/example/src/main/AndroidManifest.xml
+++ b/MotionLayout/example/src/main/AndroidManifest.xml
@@ -11,16 +11,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".HenCoderActivity" />
-        <activity android:name=".YoutubeLikeActivity"/>
+        <activity android:name=".YoutubeLikeActivity" />
         <activity android:name=".MotionLayoutActivity" />
-
+        <activity
+            android:name=".ObjectAnimatorActivity"
+            android:exported="false" />
     </application>
+
 </manifest>
